SF Primes/src/objects/PM_Interface_Audit_Log__c.object
<CustomObject>
    <fields>
        <fullName>Date_Executed__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Interface_Audit_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Unique_Id_XREF__c</fullName>
        <externalId>true</externalId>
        <label>External Unique Id XREF</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Reason_Code__c</fullName>
        <label>Failure Reason Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <label>Interface Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Message__c</fullName>
        <description>Captures the entire JSON message sent from impact.</description>
        <label>JSON Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Id_XREF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id XREF</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_SubProject_Id_XREF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique SubProject Id XREF</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_SubProject_Name_XREF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique SubProject Name XREF</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PM Interface Audit Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Executed__c</columns>
        <columns>Executed_By__c</columns>
        <columns>Result__c</columns>
        <columns>External_Unique_Id_XREF__c</columns>
        <columns>Failure_Reason_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Failures</fullName>
        <columns>NAME</columns>
        <columns>Interface_Name__c</columns>
        <columns>Date_Executed__c</columns>
        <columns>Executed_By__c</columns>
        <columns>Result__c</columns>
        <columns>External_Unique_Id_XREF__c</columns>
        <columns>Failure_Reason_Code__c</columns>
        <columns>JSON_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Result__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Failures</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Interface_Name__c</columns>
        <columns>Date_Executed__c</columns>
        <columns>Executed_By__c</columns>
        <columns>Result__c</columns>
        <columns>External_Unique_Id_XREF__c</columns>
        <columns>Failure_Reason_Code__c</columns>
        <columns>JSON_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_All</fullName>
        <columns>NAME</columns>
        <columns>Interface_Name__c</columns>
        <columns>Date_Executed__c</columns>
        <columns>Executed_By__c</columns>
        <columns>Result__c</columns>
        <columns>External_Unique_Id_XREF__c</columns>
        <columns>Failure_Reason_Code__c</columns>
        <columns>JSON_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today (All)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_s_Failure</fullName>
        <columns>NAME</columns>
        <columns>Interface_Name__c</columns>
        <columns>Date_Executed__c</columns>
        <columns>Executed_By__c</columns>
        <columns>Result__c</columns>
        <columns>External_Unique_Id_XREF__c</columns>
        <columns>Failure_Reason_Code__c</columns>
        <columns>JSON_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Result__c</field>
            <operation>equals</operation>
            <value>Failure</value>
        </filters>
        <label>Today&apos;s Failure</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IAL-{0000000000}</displayFormat>
        <label>PM Interface Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Interface Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>